tests/errors/semantics/struct_order_init_list_wrong.odl
main :: () -> void {
    foo_t :: struct {
        a := 5;
        b := false;
        c: f64 = 32.5;
    };

    foo := foo_t.{b: true, a:1};

    printint(foo.a);
    println();
};